--- a/html/index.html
+++ b/html/index.html
@@ -3,9 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Position Properties</title>
+    <title>CSS Position Properties</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    
+    <header>
+        <nav>
+    <h1>CSS Positions</h1>
+    <ol>
+        <!--   flow related position    -->
+        <li>Static</li>
+        <li>Relative</li>
+        <li>Absulute</li>
+     <!--   scroll related position    -->
+        <li>Fixed</li>
+        <li>sticky</li>
+    </ol>
+</nav>
+    <div class="dummi"></div>
+    <div class="dummi"></div>
+    <div class="dummi"></div>
+    <div class="dummi"></div>
+    <div class="dummi"></div>
+    <div class="dummi"></div>
+    <div class="dummi"></div>
+    <div class="dummi"></div>
+    <div class="dummi"></div>
+    <div class="dummi"></div>
+    <div class="dummi"></div>
+    <div class="dummi"></div>
+    <div class="dummi"></div>
+    <div class="dummi"></div>
+    <div class="dummi"></div>
+</header>
+<div class="dummi"></div>
+<div class="dummi"></div>
+<div class="dummi"></div>
+<div class="dummi"></div>
+<div class="dummi"></div>
+<div class="dummi"></div>
+<div class="dummi"></div>
+<div class="dummi"></div>
 </body>
 </html>
